--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -44,7 +44,7 @@ html
                     li
                       a(href='/panel/employees/new') New Employee
                     li
-                      a(href='#') List Employees
+                      a(href='/panel/employees') List Employees
                 li.divider
                 li
                   a(href='#') Offices
