--- a/views/layout.jade
+++ b/views/layout.jade
@@ -49,6 +49,7 @@ html
     block content
 
     block scriptsfoot
+      script(src='js/vendor/jquery.js')
       script
         document.write('<script src=' +
         ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
@@ -56,5 +57,6 @@ html
       script(src='js/foundation.min.js')
       script
         $(document).foundation();
+      script(src='javascripts/service.js')
 
 
